--- a/style.css
+++ b/style.css
@@ -737,4 +737,51 @@ footer {
   color: #C1C2C4; 
 }
 
+/* ADAPTATIVE MOBILE VERSION*/
+@media (max-width: 768px) {
+  .content {
+    padding-left: 20px;
+  }
+  .header-content {
+    left: 20px;
+  }
+  .header-content2 {
+    left: 200px;
+    top: 100px;
+  }
+  .contenttitle, .contenttitle2, .contenttitle3 {
+    margin-left: 20px;
+  }
+  .container1 {
+    grid-template-columns: 1fr;
+  }
+}
 
+@media (max-width: 576px) {
+  .headercontainer {
+    height: auto;
+  }
+  .container1, .container2, .container3 {
+    display: block;
+    width: 100%;
+    padding: 0;
+  }
+  .header-content2 {
+    left: 50px;
+    top: 80px;
+  }
+  .container1 {
+    grid-template-columns: 1fr;
+  }
+  .transparentbox {
+    width: 100%;
+    left: 0;
+    top: 50px;
+  }
+  .container3 {
+    grid-template-columns: 1fr;
+  }
+  .centerbox {
+    padding: 10px;
+  }
+}
